--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "nodemon --watch main.js --exec npm run build",
+    "build": "electron ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^31.0.1"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.3"
   }
 }
